# cooking_website

./: .gitignore  docker-compose.test.yml  docker-compose.yml
console/: Dockerfile  index.html  package-lock.json  package.json
console/src/: App.tsx  index.css
console/src/components/: RecipeDraftForm.tsx  RecipeManager.tsx  RecipeViewer.tsx  match_checker.tsx  types.ts
nginx/: default.conf.template  dockerfile
public_server/: Cargo.toml  Dockerfile
public_server/src/: database.rs  handlers.rs  main.rs  models.rs  routes.rs
server/: Dockerfile  requirements.txt  wait-for-db.sh
server/alembic/: env.py
server/alembic/versions/: 41b0b1ebd9ce_adding_cascading_delete_to_recipes_.py  480c2898a991_create_initial_schema.py  7bce26ea193d_change_ingredient_quantity_to_str_to_.py  7f2e4e528ece_unique_dish_name.py  946b70e36b6f_fix_matchchecker_table.py  ba08389779eb_adding_recipe_component_name.py
server/app/: database.py  main.py  sqlitetopostgres.py
server/app/db_models/: models.py
server/app/pydantic_models/: match_checker.py  recipes.py
server/app/router/: match_checker.py  recipes.py
server/app/scripts/: APRIR.py  APRWS.py
