[package]
name = "public_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }

home = "=0.5.9"
base64ct = "=1.6.0"
